--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ strong {
     font-style: italic;
     text-transform: uppercase;
 }
+
+h2 {
+    border-style: dashed;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-color: red;
+}
