--- a/style.css
+++ b/style.css
@@ -1,17 +1,51 @@
 body {
     font-family: arial, helvetica, sans-serif;
     font-size: 14px;
+    color: black;
+    background-color: #ffc;
+    margin: 20px;
+    padding: 0;
+}
+
+/* This is a comment, by the way */
+
+p {
+    line-height: 21px;
 }
 
 h1 {
+    color: #ffc;
+    background-color: #900;
     font-size: 2em;
+    margin: 0;
+    margin-bottom: 7px;
+    padding: 4px;
+    font-style: italic;
+    text-align: center;
+    letter-spacing: 0.5em;
+    border-bottom-style: solid;
+    border-bottom-width: 0.5em;
+    border-bottom-color: #c00;
 }
 
 h2 {
+    color: white;
+    background-color: #090;
     font-size: 1.5em;
-    background-color: #ccc;
-    margin: 20px;
-    padding: 40px;
+    margin: 0;
+    padding: 2px;
+    padding-left: 14px;
+}
+
+h3 {
+    color: #999;
+    font-size: 1.25em;
+}
+
+img {
+    border-style: dashed;
+    border-width: 2px;
+    border-color: #ccc;
 }
 
 a {
@@ -23,10 +57,11 @@ strong {
     text-transform: uppercase;
 }
 
-h2 {
-    border-style: dashed;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-color: red;
+li {
+    color: #900;
+    font-style: italic;
+}
+
+table {
+    background-color: #ccc;
 }
