--- a/style.css
+++ b/style.css
@@ -19,3 +19,17 @@ a:link {
 a:visited {
     color: purple;
 }
+
+a:active {
+    color: red;
+}
+
+a:hover {
+    text-decoration: none;
+    color: blue;
+    background-color: yellow;
+}
+
+input:focus, textarea:focus {
+    background: #eee;
+}
