--- a/style.css
+++ b/style.css
@@ -42,3 +42,7 @@ p {
     border-color: red green blue yellow;
     margin: 10px 50px;
 }
+
+body {
+    background: white url(http://www.htmldog.com/images/bg.gif) no-repeat top right;
+}
