--- a/style.css
+++ b/style.css
@@ -46,3 +46,6 @@ p {
 body {
     background: white url(http://www.htmldog.com/images/bg.gif) no-repeat top right;
 }
+
+div p { color: red }
+p { color: blue }
