Adding pseudo elements

--- a/style.css
+++ b/style.css
@@ -54,3 +54,15 @@ p { color: blue }
     display: block;
     padding: 20px 10px;
 }
+p {
+    font-size: 12px;
+}
+
+p:first-letter {
+    font-size: 24px;
+    float: left;
+}
+
+p:first-line {
+    font-weight: bold;
+}
