--- a/style.css
+++ b/style.css
@@ -54,15 +54,24 @@ p { color: blue }
     display: block;
     padding: 20px 10px;
 }
-p {
-    font-size: 12px;
+blockquote:before {
+    content: open-quote;
 }
 
-p:first-letter {
-    font-size: 24px;
-    float: left;
+blockquote:after {
+    content: close-quote;
 }
 
-p:first-line {
-    font-weight: bold;
+li:before {
+    content: "POW! ";
+}
+
+p:before {
+    content: url(images/jam.jpg);
+}
+
+li:before {
+    content: "POW! ";
+    background: red;
+    color: #fc0;
 }
