Add a border radius

--- a/style.css
+++ b/style.css
@@ -85,3 +85,15 @@ p { color: blue }
 #footer {
     clear: both;
 }
+
+#marilyn {
+    background: #fc0; 
+    padding: 20px;
+    border-radius: 10px;
+}
+
+#ok_a_border_then {
+    border: 5px solid #8b2;
+    padding: 20px;
+    border-radius: 5px;
+}
