--- a/style.css
+++ b/style.css
@@ -97,3 +97,9 @@ p { color: blue }
     padding: 20px;
     border-radius: 5px;
 }
+
+#monroe {
+    background: #fc0;
+    padding: 20px;
+    border-radius: 3px 6px 9px 12px;
+}
