--- a/style.css
+++ b/style.css
@@ -114,3 +114,12 @@ p { color: blue }
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#contact * {
+    display: block;
+}
