--- a/style.css
+++ b/style.css
@@ -126,3 +126,9 @@ p { color: blue }
 
 #genus_examples > li { border: 1px solid red }
 h1 + p { font-weight: bold }
+
+h1 {
+    padding: 50px;
+    background-image: url(snazzy.jpg);
+    color: rgba(0,0,0,0.8);
+}
