--- a/style.css
+++ b/style.css
@@ -180,3 +180,12 @@ background: url(bg.png), url(bullet.png) 0 50% no-repeat, url(arrow.png) right n
     padding: 20px;
     background: url(chilli.png) 0 0 no-repeat;
 }
+
+.note {
+    width: 300px;
+    height: 300px;
+    background: hsl(36,100%,50%);
+}
+transform: rotate(-10deg);
+transform: skew(20deg,10deg);
+transform-origin: 0 0;
