--- a/style.css
+++ b/style.css
@@ -186,6 +186,12 @@ background: url(bg.png), url(bullet.png) 0 50% no-repeat, url(arrow.png) right n
     height: 300px;
     background: hsl(36,100%,50%);
 }
-transform: rotate(-10deg);
-transform: skew(20deg,10deg);
-transform-origin: 0 0;
+#top{
+background: linear-gradient(hsl(0,100%,50%),hsl(60,100%,50%),hsl(120,100%,50%),hsl(180,100%,50%),hsl(240,100%,50%),hsl(300,100%,50%));
+}
+
+body {
+    background: #666 url(fade.png) 0 0 repeat-y;
+    background: -webkit-linear-gradient(right, #000, #666); 
+    background: linear-gradient(to right, #000, #666);
+}
