--- a/style.css
+++ b/style.css
@@ -190,8 +190,6 @@ background: url(bg.png), url(bullet.png) 0 50% no-repeat, url(arrow.png) right n
 #top{background: radial-gradient(at top left, yellow, green);
 background: radial-gradient(circle closest-side, yellow, green);}
 body {
-background: radial-gradient(circle closest-side at 100px 200px , black, white);
+background: linear-gradient(135deg, hsl(36,100%,50%) 10%, hsl(72,100%,50%) 60%, white 90%);
 
-
-background: -webkit-radial-gradient(100px 200px, circle closest-side, black, white);
 }
